--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,3 @@
-
+# Streamlit secrets live in Streamlit Cloud, not in the repo.
+# Add your real key only in Streamlit Cloud: Settings → Secrets.
+OPENCAGE_API_KEY = "set-in-streamlit-cloud"
